# ai-agent-finance-analyst

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/: analyze-stock.md  quant-reference.md  valuation-models.md
docs/: ARCHITECTURE.md
frontend/: index.html
frontend/static/: app.js  styles.css
mcp_servers/sec_edgar/: server.py
mcp_servers/yahoo_finance/: server.py
src/: api.py  main.py  orchestrator.py
src/agents/: definitions.py
src/agents/prompts/: fund_manager.md  fundamental.md  macro.md  quant.md  red_team.md  sentiment.md  valuation.md
src/agents/schemas/: fundamental.py  macro.py  quant.py  red_team.py  sentiment.py  thesis.py  valuation.py
src/scripts/: comparables.py  dcf_model.py  risk_metrics.py  technical_analysis.py
tests/: test_orchestrator.py  test_schemas.py  test_scripts.py
